fix: align items

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ header > img {
 .image-container {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 
